2010-01-26  Bob Halley  <halley@dnspython.org>

	* (Version 1.8.0 released)

2010-01-13  Bob Halley  <halley@dnspython.org>

	* dns/dnssec.py: Added RSASHA256 and RSASHA512 codepoints; added
	  other missing codepoints to _algorithm_by_text.

2010-01-12  Bob Halley  <halley@dnspython.org>

	* Escapes in masterfiles now work correctly.  Previously they were
	  only working correctly when the text involved was part of a domain
	  name.

	* dns/tokenizer.py: The tokenizer's get() method now returns Token
	  objects, not (type, text) tuples.

2009-11-13  Bob Halley  <halley@dnspython.org>

	* Support has been added for hmac-sha1, hmac-sha224, hmac-sha256,
	  hmac-sha384 and hmac-sha512.  Thanks to Kevin Chen for a
	  thoughtful, high quality patch.

	* dns/update.py (Update::present): A zero TTL was not added if
	  present() was called with a single rdata, causing _add() to be
	  unhappy.  Thanks to Eugene Kim for reporting the problem and
	  submitting a patch.

	* dns/entropy.py: Use os.urandom() if present.  Don't seed until
	  someone wants randomness.

2009-09-16  Bob Halley  <halley@dnspython.org>

	* dns/entropy.py: The entropy module needs locking in order to be
	  used safely in a multithreaded environment.  Thanks to Beda Kosata
	  for reporting the problem.

2009-07-27  Bob Halley  <halley@dnspython.org>

	* dns/query.py (xfr): The socket was not set to nonblocking mode.
	  Thanks to Erik Romijn for reporting this problem.

2009-07-23  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/IN/SRV.py (SRV._cmp): SRV records were compared
	  incorrectly due to a cut-and-paste error.  Thanks to Tommie
	  Gannert for reporting this bug.

	* dns/e164.py (query): The resolver parameter was not used.
	  Thanks to Matías Bellone for reporting this bug.

2009-06-23  Bob Halley  <halley@dnspython.org>

	* dns/entropy.py (EntropyPool.__init__): open /dev/random unbuffered;
	  there's no need to consume more randomness than we need.  Thanks